# muellabfuhrplan

./: .gitignore  README.md  __init__.py  eins.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
tests/: __init__.py  calendar_test.py
