[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garbage_collection_ics_creator"
version = "0.1.0"
description = "Create garbage collection plan"
authors = [
    { name = "devolas", email = "your.email@meckergasse.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

[project.dependencies]
ics = "^0.7.0"  # Specify the version you want to use
